--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/GamerSenior/gruta-do-jamal#readme",
   "dependencies": {
+    "cirrus-ui": "^0.6.0",
     "next": "^10.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
