--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "cirrus-ui": "^0.6.0",
     "next": "^10.0.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "sharp": "^0.26.2"
   },
   "devDependencies": {
     "gray-matter": "^4.0.2",
