--- a/jsconfig.json
+++ b/jsconfig.json
@@ -7,5 +7,8 @@
             "@posts": ["_posts/*"],
             "@api": ["api/index"],
         }
-    }
+    },
+    "exclude": [
+        "node_modules"
+    ]
 }
